15/06/2023 - 14:55 - Cassiano - v0.0.2
Front:
- More fidelity to the prototype;
Back:
-No changes.