@@ -11,8 +11,23 @@
     <title>eTransporte-</title>
 </head>
 <body>
-    <div class="notifications">
-        
-    </div>
+    <span class="notificacoes-home">
+        <div class="notificacao-transporte">
+            <div class="not-mesg-transporte"  style="height:100%; width:100%;">Transporte<br>
+                <img src="./assets/img/bus.png" alt="transporte" width="50px" style="padding:10px; padding-left:4px;">
+            </div>
+        </div>
+        <div class="not-spacer">
+            <div class="not-design-column-spacer"></div>
+        </div>
+        <div class="notificacao-mensagem">
+            <div class="not-mesg-user" style="height:100%; width:30%;">Usuario<br>
+                <img src="./assets/img/usuario.png" alt="usuario" width="50px" style="padding:10px; padding-left:4px;">
+            </div>
+            <div class="not-mesg-content" style="height:100%; width:70%;">Mensagem<br>
+                <img src="./assets/img/e-mail.png" alt="" width="50px" style="padding:10px; padding-left:4px;">
+            </div>
+        </div>
+</span>
 </body>
 </html>
