@@ -1,5 +1,6 @@
-15/06/2023 - 14:55 - Cassiano - v0.0.2
+15/06/2023 - 17:11 - Cassiano - v0.0.3
 Front:
 - More fidelity to the prototype;
+- Notifications added;
 Back:
 -No changes.
